--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -5,59 +5,119 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Support Tickets – Tidyzenic Admin</title>
 
-  <!-- Only local CSS -->
+  <!-- Compiled Tailwind CSS -->
   <link rel="stylesheet" href="/styles.css" />
+
+  <!-- App Scripts -->
+  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer src="/admin/js/tickets.js"></script>
+  <script defer src="/admin/js/load-sidebar.js"></script>
+  <script defer src="/js/auth-check.js"></script>
+
+  <style>
+    @keyframes fade-in {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fade-in 0.25s ease-out;
+    }
+  </style>
 </head>
 
-<body class="h-full font-sans flex flex-col">
-  <!-- Header -->
-  <header class="p-4 bg-white shadow sticky top-0 z-40 flex items-center justify-between">
+<body class="h-full font-sans flex flex-col bg-gray-100">
+  <!-- Mobile Header -->
+  <header class="md:hidden p-4 bg-white shadow sticky top-0 z-40 flex items-center justify-between">
     <div class="flex items-center gap-3">
+      <button id="menuToggle" class="text-gray-700 focus:outline-none">
+        <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
       <span class="font-bold text-lg text-indigo-600">Admin</span>
-      <span id="userName" class="ml-2 text-sm text-gray-500">Support Panel</span>
+      <span id="userName" class="ml-2 text-sm text-gray-500"></span>
     </div>
   </header>
 
-  <!-- Main Content -->
-  <main class="flex-1 p-6 md:p-10 max-w-5xl mx-auto">
-    <h1 class="text-3xl font-bold text-indigo-700 mb-6">Support Tickets</h1>
+  <div class="flex flex-1">
+    <div id="sidebar-container"></div>
+    <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 hidden z-30 md:hidden"></div>
 
-    <!-- Search Input -->
-    <input
-      id="ticketSearch"
-      type="text"
-      placeholder="🔍 Search tickets..."
-      class="w-full px-4 py-3 mb-6 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
-    />
+    <!-- Main Content -->
+    <main class="flex-1 p-6 md:p-10">
+      <div class="max-w-5xl mx-auto space-y-6">
+        <!-- Page Header -->
+        <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
 
-    <!-- Ticket List -->
-    <div class="space-y-6">
-      <!-- Example Ticket Card -->
-      <div class="ticket-card">
-        <div>
-          <h3 class="text-xl font-semibold text-indigo-700">Booking Glitch</h3>
-          <p class="text-gray-700 mt-1">Calendar not showing available slots.</p>
-          <p class="text-sm text-gray-500 mt-2">
-            <strong class="text-gray-700">From:</strong> ladygreener ·
-            <span class="font-medium text-yellow-600">Open</span>
-          </p>
+        <!-- Search Bar -->
+        <input
+          id="ticketSearch"
+          type="text"
+          placeholder="🔍 Search tickets..."
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
+        />
+
+        <!-- Ticket List -->
+        <div id="ticketList" class="space-y-6"></div>
+
+        <!-- Empty State -->
+        <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
+          <p>No support tickets found.</p>
         </div>
 
-        <div class="flex flex-wrap gap-3 mt-4">
-          <button class="btn btn-indigo">💬 Reply</button>
-          <button class="btn btn-secondary">📂 Show Thread</button>
-          <button class="btn btn-success">✅ Mark Resolved</button>
-          <button class="btn btn-danger">🗑 Delete</button>
+        <!-- Pagination -->
+        <div id="pagination" class="flex justify-center gap-3 mt-8 hidden">
+          <button id="prevPage" class="pagination-btn">← Previous</button>
+          <span id="pageIndicator" class="px-4 py-2 font-medium text-gray-600 text-sm">Page 1</span>
+          <button id="nextPage" class="pagination-btn">Next →</button>
         </div>
       </div>
-    </div>
+    </main>
+  </div>
 
-    <!-- Pagination -->
-    <div class="flex justify-center gap-2 mt-10">
-      <button class="pagination-btn">1</button>
-      <button class="pagination-btn">2</button>
-      <button class="pagination-btn">3</button>
+  <!-- Modal -->
+  <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-40 z-50 hidden flex items-center justify-center px-4">
+    <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 sm:p-7 animate-fade-in relative transition-all">
+      <div class="flex justify-between items-center mb-4">
+        <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
+        <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
+      </div>
+      <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3"></div>
+      <textarea
+        id="modalTextarea"
+        rows="4"
+        placeholder="Write your reply..."
+        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
+      ></textarea>
+      <div class="mt-4 text-right">
+        <button
+          id="modalSubmit"
+          class="btn btn-indigo">
+          Send Reply
+        </button>
+      </div>
     </div>
-  </main>
+  </div>
+
+  <!-- Ticket Template -->
+  <template id="ticketThreadTemplate">
+    <div class="ticket-card">
+      <div>
+        <h3 class="text-xl font-semibold text-indigo-700">{{subject}}</h3>
+        <p class="text-gray-700 mt-1">{{message}}</p>
+        <p class="text-sm text-gray-500 mt-2">
+          <strong class="text-gray-700">From:</strong> {{business_name}} ·
+          <span class="font-medium text-{{statusColor}}">{{status}}</span>
+        </p>
+      </div>
+      <div class="flex flex-wrap gap-3 mt-4">
+        <button class="btn btn-indigo reply-btn">💬 Reply</button>
+        <button class="btn btn-secondary toggle-thread-btn">📂 Show Thread</button>
+        <button class="btn btn-success resolve-btn">✅ Mark Resolved</button>
+        <button class="btn btn-danger delete-btn">🗑 Delete</button>
+      </div>
+      <div class="replies mt-4 hidden"></div>
+    </div>
+  </template>
 </body>
 </html>
