--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -1,103 +1,127 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100 text-gray-900">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Support Tickets – Tidyzenic Admin</title>
-    <link rel="stylesheet" href="/styles.css" />
-    <script defer src="/socket.io/socket.io.js"></script>
-    <script defer src="/admin/js/load-sidebar.js"></script>
-    <script defer src="/js/auth-check.js"></script>
-    <script defer src="/admin/js/tickets-brand.js"></script>
-    <style>
-      @keyframes fade-in {
-        from { opacity: 0; transform: translateY(10px); }
-        to { opacity: 1; transform: translateY(0); }
-      }
-      .animate-fade-in {
-        animation: fade-in 0.3s ease-out;
-      }
-      .text-brand {
-        color: #0b63ce;
-      }
-      .bg-brand {
-        background-color: #0b63ce;
-      }
-      .hover\:bg-brand-dark:hover {
-        background-color: #094ca0;
-      }
-      .bg-brand-light {
-        background-color: #e6f0fd;
-      }
-      .border-brand {
-        border-color: #0b63ce;
-      }
-    </style>
-  </head>
-  <body class="h-full font-sans flex flex-col bg-gray-100">
-    <header class="md:hidden p-4 bg-white shadow sticky top-0 z-40 flex items-center justify-between">
-      <div class="flex items-center gap-3">
-        <button id="menuToggle" class="text-gray-700 focus:outline-none">
-          <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
-          </svg>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Support Tickets – Tidyzenic Admin</title>
+
+  <!-- Styles -->
+  <link rel="stylesheet" href="/styles.css" />
+
+  <!-- Scripts -->
+  <script defer src="/socket.io/socket.io.js"></script>
+  <script defer src="/admin/js/tickets.js"></script>
+  <script defer src="/admin/js/load-sidebar.js"></script>
+  <script defer src="/js/auth-check.js"></script>
+
+  <style>
+    @keyframes fade-in {
+      from { opacity: 0; transform: translateY(10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fade-in {
+      animation: fade-in 0.25s ease-out;
+    }
+  </style>
+</head>
+
+<body class="h-full font-sans bg-gray-100 flex flex-col">
+  <!-- Mobile Header -->
+  <header class="md:hidden sticky top-0 z-40 bg-white shadow p-4 flex items-center justify-between">
+    <div class="flex items-center gap-3">
+      <button id="menuToggle" class="text-gray-700 focus:outline-none">
+        <svg class="w-7 h-7" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+      <span class="text-indigo-600 text-lg font-bold">Admin</span>
+      <span id="userName" class="ml-2 text-sm text-gray-500"></span>
+    </div>
+  </header>
+
+  <div class="flex flex-1">
+    <div id="sidebar-container"></div>
+    <div id="sidebarBackdrop" class="fixed inset-0 z-30 bg-black bg-opacity-50 hidden md:hidden"></div>
+
+    <!-- Main Section -->
+    <main class="flex-1 p-6 md:p-10">
+      <div class="max-w-5xl mx-auto space-y-6">
+        <!-- Title -->
+        <h1 class="text-3xl font-bold text-indigo-700">Support Tickets</h1>
+
+        <!-- Search Input -->
+        <input
+          id="ticketSearch"
+          type="text"
+          placeholder="🔍 Search tickets..."
+          class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500"
+        />
+
+        <!-- Ticket List -->
+        <div id="ticketList" class="space-y-6"></div>
+
+        <!-- Empty State -->
+        <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
+          <p>No support tickets found.</p>
+        </div>
+
+        <!-- Pagination -->
+        <div id="pagination" class="flex justify-center gap-3 mt-8 hidden">
+          <button id="prevPage" class="px-4 py-2 rounded border shadow bg-white hover:bg-gray-50 text-sm">← Previous</button>
+          <span id="pageIndicator" class="px-4 py-2 font-medium text-gray-600 text-sm">Page 1</span>
+          <button id="nextPage" class="px-4 py-2 rounded border shadow bg-white hover:bg-gray-50 text-sm">Next →</button>
+        </div>
+      </div>
+    </main>
+  </div>
+
+  <!-- Modal -->
+  <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
+    <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md p-6 animate-fade-in relative">
+      <div class="flex justify-between items-center mb-4">
+        <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
+        <button id="modalClose" class="text-gray-400 hover:text-gray-700 text-2xl font-bold leading-none">&times;</button>
+      </div>
+
+      <div id="modalThread" class="text-sm text-gray-700 space-y-3 mb-4 border-t pt-3"></div>
+
+      <textarea
+        id="modalTextarea"
+        rows="4"
+        placeholder="Write your reply..."
+        class="w-full p-3 border border-gray-300 rounded-lg shadow-sm focus:outline-none focus:ring-2 focus:ring-indigo-500 resize-none"
+      ></textarea>
+
+      <div class="mt-4 text-right">
+        <button
+          id="modalSubmit"
+          class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg shadow"
+        >
+          Send Reply
         </button>
-        <span class="font-bold text-lg text-brand">Admin</span>
-        <span id="userName" class="ml-2 text-sm text-gray-500"></span>
-      </div>
-    </header>
-
-    <div class="flex flex-1">
-      <div id="sidebar-container"></div>
-      <div id="sidebarBackdrop" class="fixed inset-0 bg-black bg-opacity-50 hidden z-30 md:hidden"></div>
-
-      <main class="flex-1 p-6 md:p-10">
-        <div class="max-w-5xl mx-auto space-y-6">
-          <div class="flex justify-between items-center">
-            <h1 class="text-3xl font-bold text-brand">Support Tickets</h1>
-          </div>
-
-          <input
-            id="ticketSearch"
-            type="text"
-            placeholder="🔍 Search tickets..."
-            class="w-full px-4 py-3 border border-gray-300 rounded-xl shadow-sm focus:outline-none focus:ring-2 focus:ring-brand"
-          />
-
-          <div id="ticketList" class="space-y-6"></div>
-
-          <div id="emptyState" class="hidden text-center text-gray-400 mt-10">
-            <p>No support tickets found.</p>
-          </div>
-
-          <div id="pagination" class="flex justify-center gap-2 mt-8 hidden">
-            <button id="prevPage" class="px-4 py-2 rounded-full bg-white border shadow hover:bg-gray-50">← Prev</button>
-            <span id="pageIndicator" class="px-4 py-2 font-medium text-gray-700">Page 1</span>
-            <button id="nextPage" class="px-4 py-2 rounded-full bg-white border shadow hover:bg-gray-50">Next →</button>
-          </div>
-        </div>
-      </main>
-    </div>
-
-    <div id="ticketModal" class="fixed inset-0 bg-black bg-opacity-40 z-50 hidden flex items-center justify-center px-4">
-      <div class="bg-white rounded-xl shadow-xl p-6 w-full max-w-sm animate-fade-in relative">
-        <div class="flex justify-between items-center mb-3">
-          <h2 id="modalTitle" class="text-lg font-semibold text-brand">Reply to Ticket</h2>
-          <button id="modalClose" class="text-gray-400 hover:text-black text-2xl font-bold">&times;</button>
-        </div>
-        <div id="modalThread" class="space-y-2 text-sm text-gray-600 mb-4"></div>
-        <textarea
-          id="modalTextarea"
-          rows="4"
-          placeholder="Write your reply..."
-          class="w-full border border-gray-300 rounded-lg p-3 focus:outline-none focus:ring-2 focus:ring-brand resize-none"
-        ></textarea>
-        <div class="mt-4 text-right">
-          <button id="modalSubmit" class="bg-brand hover:bg-brand-dark text-white px-5 py-2 rounded-lg shadow">
-            Send Reply
-          </button>
-        </div>
       </div>
     </div>
-  </body>
+  </div>
+
+  <!-- Ticket Template -->
+  <template id="ticketThreadTemplate">
+    <div class="bg-white border border-gray-200 rounded-2xl shadow p-6 space-y-3">
+      <div>
+        <h3 class="text-xl font-semibold text-indigo-700">{{subject}}</h3>
+        <p class="text-gray-700 mt-1">{{message}}</p>
+        <p class="text-sm text-gray-500 mt-2">
+          <strong class="text-gray-700">From:</strong> {{business_name}} ·
+          <span class="font-medium text-{{statusColor}}">{{status}}</span>
+        </p>
+      </div>
+      <div class="flex flex-wrap gap-3 mt-4">
+        <button class="reply-btn bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-1.5 rounded-full text-sm shadow">💬 Reply</button>
+        <button class="toggle-thread-btn bg-gray-100 hover:bg-gray-200 border text-gray-700 px-4 py-1.5 rounded-full text-sm">📂 Show Thread</button>
+        <button class="resolve-btn bg-green-100 hover:bg-green-200 border text-green-700 px-4 py-1.5 rounded-full text-sm">✅ Mark Resolved</button>
+        <button class="delete-btn bg-red-100 hover:bg-red-200 border text-red-600 px-4 py-1.5 rounded-full text-sm">🗑 Delete</button>
+      </div>
+      <div class="replies mt-4 hidden"></div>
+    </div>
+  </template>
+</body>
 </html>
