--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -95,7 +95,7 @@
       <div class="mt-4 text-right">
         <button
           id="modalSubmit"
-          class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg shadow"
+          class="bg-indigo-600 hover:bg-indigo-700 text-white font-semibold px-5 py-2 rounded-lg shadow-sm transition"
         >
           Send Reply
         </button>
@@ -105,21 +105,25 @@
 
   <!-- Ticket Template -->
   <template id="ticketThreadTemplate">
-    <div class="bg-white border border-gray-200 rounded-2xl shadow p-6 space-y-3">
+    <div class="bg-white border border-gray-200 rounded-2xl shadow-md px-6 py-5 space-y-4">
       <div>
-        <h3 class="text-xl font-semibold text-indigo-700">{{subject}}</h3>
-        <p class="text-gray-700 mt-1">{{message}}</p>
-        <p class="text-sm text-gray-500 mt-2">
-          <strong class="text-gray-700">From:</strong> {{business_name}} ·
-          <span class="font-medium text-{{statusColor}}">{{status}}</span>
-        </p>
+        <h3 class="text-xl font-semibold text-indigo-700 leading-tight">{{subject}}</h3>
+        <p class="text-sm text-gray-800 mt-1">{{message}}</p>
+
+        <div class="text-sm text-gray-600 mt-3 space-y-1">
+          <p><span class="font-medium text-gray-800">From:</span> {{business_name}}</p>
+          <p><span class="font-medium text-gray-800">Status:</span> <span class="text-{{statusColor}}">{{status}}</span></p>
+          <p><span class="font-medium text-gray-800">Created:</span> {{created}}</p>
+        </div>
       </div>
-      <div class="flex flex-wrap gap-3 mt-4">
-        <button class="reply-btn bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-1.5 rounded-full text-sm shadow">💬 Reply</button>
-        <button class="toggle-thread-btn bg-gray-100 hover:bg-gray-200 border text-gray-700 px-4 py-1.5 rounded-full text-sm">📂 Show Thread</button>
-        <button class="resolve-btn bg-green-100 hover:bg-green-200 border text-green-700 px-4 py-1.5 rounded-full text-sm">✅ Mark Resolved</button>
-        <button class="delete-btn bg-red-100 hover:bg-red-200 border text-red-600 px-4 py-1.5 rounded-full text-sm">🗑 Delete</button>
+
+      <div class="flex flex-wrap gap-2 pt-2">
+        <button class="reply-btn bg-indigo-600 hover:bg-indigo-700 text-white text-sm font-semibold px-4 py-1.5 rounded shadow">💬 Reply</button>
+        <button class="toggle-thread-btn border border-indigo-300 text-indigo-600 hover:bg-indigo-50 text-sm px-4 py-1.5 rounded">📂 Show Thread</button>
+        <button class="resolve-btn border border-green-300 text-green-600 hover:bg-green-50 text-sm px-4 py-1.5 rounded">✔ Mark Resolved</button>
+        <button class="delete-btn border border-red-300 text-red-600 hover:bg-red-50 text-sm px-4 py-1.5 rounded">🗑 Delete</button>
       </div>
+
       <div class="replies mt-4 hidden"></div>
     </div>
   </template>
