Enhance: Rewrite support ticket frontend and backend with reply modal, pagination, and updated DB model

--- a/public/admin/support_ticket.html
+++ b/public/admin/support_ticket.html
@@ -77,7 +77,8 @@
 
   <!-- Modal -->
   <div id="ticketModal" class="fixed inset-0 z-50 bg-black bg-opacity-40 hidden flex items-center justify-center px-4">
-    <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] p-6 animate-fade-in flex flex-col overflow-hidden">
+ <div class="bg-white rounded-2xl shadow-2xl w-full max-w-md max-h-[90vh] p-6 animate-fade-in flex flex-col overflow-y-auto">
+
       <!-- Header -->
       <div class="flex justify-between items-center mb-4">
         <h2 id="modalTitle" class="text-lg font-semibold text-indigo-700">Reply to Ticket</h2>
