--- a/public/admin/reviews.html
+++ b/public/admin/reviews.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/styles.css" />
   <script defer src="/admin/js/load-sidebar.js"></script>
   <script defer src="/admin/js/reviews.js"></script>
+  <script defer src="/admin/js/sidebar.js"></script>
+
 </head>
 <body class="h-full font-sans bg-gray-100 flex flex-col">
 
