🎨 Fixed submenu toggle behavior and chevron rotation in sidebar.js and updated sidebar.html structure

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -20,36 +20,16 @@
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
     <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
     <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
+    <a href="/admin/internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
+    <a href="/admin/internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
+
     <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
     <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
     <a href="/admin/invoices.html" class="block px-4 py-2 rounded hover:bg-blue-50">📄 Invoices</a>
     <a href="/admin/payments.html" class="block px-4 py-2 rounded hover:bg-blue-50">💳 Payments</a>
     <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
-    <a href="/admin/notifications.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
-
-    <div class="space-y-1">
-  <button
-    type="button"
-    class="dropdown-toggle w-full flex justify-between items-center px-4 py-2 rounded hover:bg-blue-50"
-  >
-    <span>🌟 Reviews Management</span>
-    <svg
-      class="w-4 h-4 transition-transform transform duration-200 ease-in-out"
-      fill="none"
-      stroke="currentColor"
-      stroke-width="2"
-      viewBox="0 0 24 24"
-    >
-      <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
-    </svg>
-  </button>
-
-  <div class="dropdown-menu hidden ml-6 mt-1 space-y-1">
-    <a href="/admin/reviews.html" class="submenu-link">🛠 Review Settings</a>
-    <a href="/admin/internal-reviews.html" class="submenu-link">📈 Review Analytics</a>
-  </div>
-</div>
-
+    <a href="admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">📈 Reviews</a>
+    <a href="internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🛠 Internal Reviews</a>
 
     <a href="/admin/marketing.html" class="block px-4 py-2 rounded hover:bg-blue-50">📣 Marketing</a>
     <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
