🎨 Fixed submenu toggle behavior and chevron rotation in sidebar.js and updated sidebar.html structure

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -20,8 +20,8 @@
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
     <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
     <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
-    <a href="/admin/internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
-    <a href="/admin/internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Notifications</a>
+    <a href="/admin/internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Internal Reviews</a>
+    <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Reviews</a>
 
     <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
     <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
