🎨 Fixed submenu toggle behavior and chevron rotation in sidebar.js and updated sidebar.html structure

--- a/public/admin/sidebar.html
+++ b/public/admin/sidebar.html
@@ -20,16 +20,13 @@
     <a href="/admin/services.html" class="block px-4 py-2 rounded hover:bg-blue-50">🧹 Services</a>
     <a href="/admin/bookings.html" class="block px-4 py-2 rounded hover:bg-blue-50">📆 Bookings</a>
     <a href="/admin/calendar.html" class="block px-4 py-2 rounded hover:bg-blue-50">🗓️ Calendar</a>
-    <a href="/admin/internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Internal Reviews</a>
-    <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🔔 Reviews</a>
+    <a href="/admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">📈 Reviews</a>
 
     <a href="/admin/staff.html" class="block px-4 py-2 rounded hover:bg-blue-50">👥 Staff</a>
     <a href="/admin/clients.html" class="block px-4 py-2 rounded hover:bg-blue-50">👤 Clients</a>
     <a href="/admin/invoices.html" class="block px-4 py-2 rounded hover:bg-blue-50">📄 Invoices</a>
     <a href="/admin/payments.html" class="block px-4 py-2 rounded hover:bg-blue-50">💳 Payments</a>
     <a href="/admin/availability.html" class="block px-4 py-2 rounded hover:bg-blue-50">⏱ Availability</a>
-    <a href="admin/reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">📈 Reviews</a>
-    <a href="internal-reviews.html" class="block px-4 py-2 rounded hover:bg-blue-50">🛠 Internal Reviews</a>
 
     <a href="/admin/marketing.html" class="block px-4 py-2 rounded hover:bg-blue-50">📣 Marketing</a>
     <a href="/admin/discounts.html" class="block px-4 py-2 rounded hover:bg-blue-50">🏷️ Discounts</a>
